--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ repositories {
 
 dependencies {
     compile "org.srplib:srp-contract:0.3.2"
+    compile "commons-io:commons-io:1.3.2"
 
     testCompile "junit:junit:4.10"
 }
